# ImageEncryption

./: .gitignore  BUILD_STATUS.md  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Doxyfile  LICENSE  README.md
.github/workflows/: tests.yml
build_vs2019/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  ImageEncryption.sln  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  imgenc.vcxproj  imgenc.vcxproj.filters
docs/: SETUP.md
include/: image_encryption.hpp  image_handler.hpp
scripts/: build_fast.bat  clean.bat  run.bat  setup_env.bat
src/: image_encryption.cpp  main.cpp
